Optimizacion de hiperparametros

--- a/problema_regresión.ipynb
+++ b/problema_regresión.ipynb
@@ -234,6 +234,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26919677",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e83be874",
    "metadata": {},
    "source": [
@@ -279,6 +287,14 @@
     "La proporción elegida permite entrenar los modelos con una cantidad suficiente de datos,\n",
     "manteniendo un conjunto de prueba representativo. El uso de una semilla fija asegura que\n",
     "los resultados puedan ser reproducidos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3102e440",
+   "metadata": {},
+   "source": [
+    "___"
    ]
   },
   {
@@ -405,10 +421,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ed625db",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a1991fb6",
    "metadata": {},
    "source": [
-    "## 4 Optimización de hiperparámetros"
+    "## 4 Optimización de hiperparámetros\n",
+    "\n",
+    "La regresión lineal no fue incluida en el proceso de optimización de hiperparámetros,\n",
+    "debido a que su versión estándar no posee hiperparámetros estructurales relevantes\n",
+    "que afecten significativamente la complejidad del modelo."
    ]
   },
   {
@@ -1531,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "id": "7907f961",
    "metadata": {},
    "outputs": [
@@ -1539,14 +1567,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'max_depth': None, 'min_samples_leaf': 10, 'min_samples_split': 2}\n",
       "DecisionTreeRegressor(min_samples_leaf=10, random_state=42)\n"
      ]
     }
    ],
    "source": [
-    "grid_tree.best_params_\n",
+    "best_grid = grid_tree.best_params_\n",
     "best_tree = grid_tree.best_estimator_\n",
     "\n",
+    "print(best_grid)\n",
     "print(best_tree)"
    ]
   },
@@ -1567,19 +1597,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "id": "1b90f0d1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[41]\u001b[39m\u001b[32m, line 18\u001b[39m\n\u001b[32m      8\u001b[39m rf = RandomForestRegressor(random_state=\u001b[32m42\u001b[39m)\n\u001b[32m     10\u001b[39m grid_rf = GridSearchCV(\n\u001b[32m     11\u001b[39m     estimator=rf,\n\u001b[32m     12\u001b[39m     param_grid=param_grid_rf,\n\u001b[32m   (...)\u001b[39m\u001b[32m     15\u001b[39m     n_jobs=-\u001b[32m1\u001b[39m\n\u001b[32m     16\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m grid_rf.fit(\u001b[43mX_train\u001b[49m, y_train)\n",
-      "\u001b[31mNameError\u001b[39m: name 'X_train' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_depth': 20, 'max_features': 'log2', 'min_samples_leaf': 1, 'n_estimators': 100}\n",
+      "RandomForestRegressor(max_depth=20, max_features='log2', random_state=42)\n"
      ]
     }
    ],
@@ -1601,7 +1628,92 @@
     "    n_jobs=-1\n",
     ")\n",
     "\n",
-    "grid_rf.fit(X_train, y_train)"
+    "grid_rf.fit(x_train, y_train)\n",
+    "\n",
+    "grid_rf.best_params_\n",
+    "best_rf = grid_rf.best_estimator_\n",
+    "\n",
+    "print(grid_rf.best_params_)\n",
+    "print(best_rf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d3edfcb",
+   "metadata": {},
+   "source": [
+    "GridSearchCV retorna el modelo que obtiene el mejor desempeño promedio en validación cruzada,\n",
+    "junto con los hiperparámetros asociados. Además, permite acceder a los resultados completos\n",
+    "de cada combinación evaluada."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0beaffc",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cea2152",
+   "metadata": {},
+   "source": [
+    "## 5 Evaluación del rendimiento \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "b92838aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Árbol Optimizado': {'MAE': 0.40481361504421026,\n",
+       "  'RMSE': np.float64(0.6031772021916121),\n",
+       "  'R2': 0.7223593982604586},\n",
+       " 'Random Forest Optimizado': {'MAE': 0.3225095278817737,\n",
+       "  'RMSE': np.float64(0.49293928769775935),\n",
+       "  'R2': 0.8145699965501119}}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred_tree_opt = best_tree.predict(x_test)\n",
+    "y_pred_rf_opt = best_rf.predict(x_test)\n",
+    "\n",
+    "resultados_opt = {\n",
+    "    \"Árbol Optimizado\": evaluar(y_test, y_pred_tree_opt),\n",
+    "    \"Random Forest Optimizado\": evaluar(y_test, y_pred_rf_opt)\n",
+    "}\n",
+    "\n",
+    "resultados_opt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce8b474c",
+   "metadata": {},
+   "source": [
+    "Se empleó validación cruzada con 5 particiones (cv=5), lo que permite obtener\n",
+    "una estimación más robusta del desempeño promedio del modelo, reduciendo la\n",
+    "dependencia de una única división de los datos y mejorando la estabilidad de\n",
+    "los resultados.\n",
+    "\n",
+    "La optimización de hiperparámetros produjo una mejora significativa en el Árbol de Decisión,\n",
+    "reduciendo el error y aumentando su capacidad explicativa. En el caso del Random Forest,\n",
+    "la mejora fue más moderada, dado que su desempeño inicial ya era elevado.\n",
+    "\n",
+    "En términos generales, el Random Forest optimizado mantiene el mejor rendimiento,\n",
+    "logrando el menor error y el mayor R², lo que confirma su capacidad para capturar\n",
+    "relaciones no lineales en los datos."
    ]
   }
  ],
