Modelos de regresion completos

--- a/problema_regresión.ipynb
+++ b/problema_regresión.ipynb
@@ -452,8 +452,10 @@
     "del desempeño del modelo.\n",
     "\n",
     "### 4.2 Validación cruzada\n",
-    "Se emplea validación cruzada con 5 particiones para balancear estabilidad en la estimación\n",
-    "del rendimiento y costo computacional."
+    "Se empleó validación cruzada con 5 particiones (cv=5), lo que permite obtener\n",
+    "una estimación más robusta del desempeño promedio del modelo, reduciendo la\n",
+    "dependencia de una única división de los datos y mejorando la estabilidad de\n",
+    "los resultados."
    ]
   },
   {
@@ -1660,7 +1662,11 @@
    "id": "3cea2152",
    "metadata": {},
    "source": [
-    "## 5 Evaluación del rendimiento \n"
+    "## 5 Evaluación del rendimiento \n",
+    "Se utilizan MAE, RMSE y R² como métricas de evaluación. MAE permite interpretar\n",
+    "el error promedio en las mismas unidades que la variable objetivo. RMSE penaliza\n",
+    "con mayor peso los errores grandes, proporcionando una medida sensible a outliers.\n",
+    "R² indica la proporción de la variabilidad explicada por el modelo."
    ]
   },
   {
@@ -1699,21 +1705,205 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce8b474c",
+   "id": "4f112da5",
    "metadata": {},
    "source": [
-    "Se empleó validación cruzada con 5 particiones (cv=5), lo que permite obtener\n",
-    "una estimación más robusta del desempeño promedio del modelo, reduciendo la\n",
-    "dependencia de una única división de los datos y mejorando la estabilidad de\n",
-    "los resultados.\n",
+    "Al comparar los modelos evaluados, se observa que el Random Forest optimizado\n",
+    "presenta el mejor desempeño en todas las métricas consideradas. Este modelo\n",
+    "logra el menor error promedio y la mayor capacidad explicativa, alcanzando un\n",
+    "R² superior al 0.8.\n",
     "\n",
-    "La optimización de hiperparámetros produjo una mejora significativa en el Árbol de Decisión,\n",
-    "reduciendo el error y aumentando su capacidad explicativa. En el caso del Random Forest,\n",
-    "la mejora fue más moderada, dado que su desempeño inicial ya era elevado.\n",
+    "El Árbol de Decisión optimizado mejora significativamente respecto a su versión\n",
+    "inicial, evidenciando la importancia de la regularización. Por su parte, la\n",
+    "Regresión Lineal ofrece un desempeño base razonable, aunque limitado frente a\n",
+    "modelos capaces de capturar relaciones no lineales.\n",
     "\n",
-    "En términos generales, el Random Forest optimizado mantiene el mejor rendimiento,\n",
-    "logrando el menor error y el mayor R², lo que confirma su capacidad para capturar\n",
-    "relaciones no lineales en los datos."
+    "En términos de generalización, el Random Forest demuestra un mejor equilibrio\n",
+    "entre complejidad y estabilidad, reduciendo el riesgo de sobreajuste."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff8b5210",
+   "metadata": {},
+   "source": [
+    "## Análisis e Interpretación \n",
+    "\n",
+    "***Recordando los mejores parámetros*** \n",
+    "\n",
+    "- max_depth : 20 \n",
+    "- max_features : log2 \n",
+    "- min_samples_leaf : 1\n",
+    "- n_estimators : 100\n",
+    "\n",
+    "El modelo óptimo corresponde a un Random Forest con profundidad máxima 20,\n",
+    "100 árboles y selección de variables por log2 en cada división. Esta configuración\n",
+    "permite capturar relaciones complejas sin crecer indefinidamente, mientras que\n",
+    "la combinación de múltiples árboles reduce la varianza y mejora la generalización."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94434af7",
+   "metadata": {},
+   "source": [
+    "### Interpretación de importancia de variables "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "0a0d1ed9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MedInc        0.403873\n",
+       "AveOccup      0.129485\n",
+       "Latitude      0.122573\n",
+       "Longitude     0.119282\n",
+       "AveRooms      0.102497\n",
+       "HouseAge      0.053657\n",
+       "AveBedrms     0.037836\n",
+       "Population    0.030797\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importancias = pd.Series(\n",
+    "    best_rf.feature_importances_,\n",
+    "    index=x.columns\n",
+    ").sort_values(ascending=False)\n",
+    "\n",
+    "importancias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b71cf7d8",
+   "metadata": {},
+   "source": [
+    "La variable MedInc presenta la mayor importancia (40%), lo que confirma que el ingreso\n",
+    "mediano del distrito es el principal determinante del valor de la vivienda. Este resultado\n",
+    "es consistente con la intuición económica y con el análisis de correlación previo.\n",
+    "\n",
+    "Asimismo, variables como AveOccup, Latitude y Longitude muestran una relevancia\n",
+    "considerable, indicando que tanto la densidad de ocupación como la ubicación geográfica\n",
+    "influyen significativamente en el precio.\n",
+    "\n",
+    "Las variables estructurales como número promedio de habitaciones o antigüedad presentan\n",
+    "menor importancia relativa, lo que sugiere que factores socioeconómicos y geográficos\n",
+    "tienen un peso mayor en la predicción del valor inmobiliario."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52b1fd2d",
+   "metadata": {},
+   "source": [
+    "### Complejidad del modelo \n",
+    "\n",
+    "El modelo presenta una complejidad considerable debido a la profundidad máxima de 20\n",
+    "y al uso de 100 árboles. Esta configuración permite capturar relaciones no lineales\n",
+    "y patrones complejos entre las variables. Sin embargo, la selección aleatoria de\n",
+    "variables en cada división (log2) introduce diversidad entre los árboles,\n",
+    "evitando que el modelo memorice los datos de entrenamiento.\n",
+    "\n",
+    "\n",
+    "### Generalización \n",
+    "El modelo demuestra una buena capacidad de generalización, reflejada en su alto R²\n",
+    "en el conjunto de prueba. La combinación de múltiples árboles reduce la varianza\n",
+    "del modelo y permite mantener estabilidad frente a datos no vistos, evitando\n",
+    "problemas significativos de sobreajuste.\n",
+    "\n",
+    "### Relación entre variables y variable objetivo \n",
+    "El análisis de importancia de variables indica que el ingreso mediano del distrito\n",
+    "es el principal determinante del valor de la vivienda, seguido por factores\n",
+    "geográficos y de densidad de ocupación. Esto sugiere que el precio inmobiliario\n",
+    "está fuertemente influenciado por variables socioeconómicas y de ubicación,\n",
+    "más que por características estructurales aisladas.\n",
+    "\n",
+    "La capacidad del modelo para capturar estas interacciones confirma la presencia\n",
+    "de relaciones no lineales entre las variables independientes y la variable objetivo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aed4596e",
+   "metadata": {},
+   "source": [
+    "### Comparación de modelos de regresión\n",
+    "\n",
+    "Se entrenaron tres modelos de regresión: Regresión Lineal, Árbol de Decisión y\n",
+    "Random Forest. Los resultados iniciales mostraron que los modelos basados en\n",
+    "árboles superan a la regresión lineal, lo que sugiere la presencia de relaciones\n",
+    "no lineales en los datos.\n",
+    "\n",
+    "Tras la optimización de hiperparámetros mediante GridSearchCV, el Árbol de\n",
+    "Decisión mostró una mejora significativa en su desempeño, mientras que el\n",
+    "Random Forest presentó una mejora moderada respecto a su versión inicial.\n",
+    "\n",
+    "En términos globales, el Random Forest optimizado obtuvo el mejor desempeño\n",
+    "en todas las métricas evaluadas.\n",
+    "\n",
+    "### Tabla resumen final \n",
+    "***Tabla conceptual***\n",
+    "\n",
+    "| Modelo | Mejores Hiperparámetros | MAE | RMSE | R² |\n",
+    "| :--- | :--- | :---: | :---: | :---: |\n",
+    "| **Regresión lineal** | Default | 0.53 | 0.75 | 0.58 |\n",
+    "| **Árbol de decisión** | `max_depth=None`, `min_samples_leaf=10` | 0.40 | 0.60 | 0.72 |\n",
+    "| **Random Forest** | `max_depth=20`, `n_estimators=100`, `max_features=log2` | 0.32 | 0.49 | 0.81 |\n",
+    "\n",
+    "\n",
+    "La tabla anterior resume el desempeño de cada modelo junto con sus mejores\n",
+    "configuraciones. Se observa que el Random Forest optimizado logra el menor\n",
+    "error promedio y la mayor capacidad explicativa, alcanzando un R² superior a 0.8."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9b522d2",
+   "metadata": {},
+   "source": [
+    "### Discusión sobre sobreajuste y generalización\n",
+    "\n",
+    "El Árbol de Decisión en su versión inicial presentaba indicios de sobreajuste,\n",
+    "lo que se evidenció en su mejora tras la regularización mediante hiperparámetros.\n",
+    "El Random Forest, al ser un modelo ensemble, mostró mayor estabilidad desde el\n",
+    "inicio, reduciendo la varianza y mejorando la generalización.\n",
+    "\n",
+    "La validación cruzada permitió seleccionar configuraciones que equilibran\n",
+    "complejidad y capacidad predictiva, evitando que el modelo memorice los datos\n",
+    "de entrenamiento."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bd41a44",
+   "metadata": {},
+   "source": [
+    "### Conclusiones Generales \n",
+    "\n",
+    "En conclusión, el análisis evidencia que el problema de predicción del valor\n",
+    "de la vivienda presenta relaciones no lineales y dependencias complejas entre\n",
+    "las variables independientes.\n",
+    "\n",
+    "El Random Forest optimizado se consolida como el modelo más adecuado para este\n",
+    "problema, al ofrecer el mejor equilibrio entre complejidad, precisión y\n",
+    "capacidad de generalización. Asimismo, el análisis de importancia de variables\n",
+    "confirma que factores socioeconómicos y geográficos, como el ingreso mediano\n",
+    "y la ubicación, desempeñan un rol fundamental en la determinación del precio\n",
+    "inmobiliario.\n",
+    "\n",
+    "Estos resultados destacan la relevancia de utilizar modelos capaces de capturar\n",
+    "interacciones no lineales en problemas de regresión con múltiples variables."
    ]
   }
  ],
